--- a/launch.json
+++ b/launch.json
@@ -1,1 +1,9 @@
-{"type":"web","web":"https://demo.personium.io/hn-app-genki/__/src/login.html"}
+{
+  "personal": {
+     "web": "https://demo.personium.io/hn-app-genki/__/src/login.html",
+     "android": "calorie-smile:",
+     "ios": "calorie-smile:",
+     "appTokenId": "tokenAcc",
+     "appTokenPw": "personiumtoken"
+  }
+}
